--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -5,7 +5,7 @@
 <table id ='list_requests' class='request_table'>
 <thead>
   <tr>
-    <th>request id</th>
+    <th>request key</th>
     <th>plugin</th>
     <th>status</th>
     <th>created at</th>
